c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_lex/string_bad_escape_sequence.c
int main(void)
{
    char *str = "foo\ybar";
    return 0;
}